Add venue detail route
